sources/openbao-config/openbao-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: cf-openbao
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: kgateway-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: openbao-ui
          port: 8200
          weight: 1
      matches:
        - headers:
            - name: Host
              type: RegularExpression
              value: openbao\..*
          path:
            type: PathPrefix
            value: /
